# Neko

./: README.md
hog_svm_dlib/src/: CMakeLists.txt  README.txt  car_detector_multiple.cpp  car_detector_single.cpp  train_car_detector_orientations.sh  train_car_detector_orientations_0_15_30_45_60_90_120_135_150_165.sh
hog_svm_dlib/src/data/whole_images/testing_images/: testing_1-55.xml
hog_svm_dlib/src/svms/svm_orientations_0_15_30_45_60_90_120_135_150_165_random_negs_64x64/: car_detector_orientation_0.svm  car_detector_orientation_120.svm  car_detector_orientation_135.svm  car_detector_orientation_15.svm  car_detector_orientation_150.svm  car_detector_orientation_165.svm  car_detector_orientation_30.svm  car_detector_orientation_45.svm  car_detector_orientation_60.svm  car_detector_orientation_90.svm
hog_svm_dlib/src/svms/svm_orientations_0_30_60_90_120_150_random_negs_64x64/: car_detector_orientation_0.svm  car_detector_orientation_120.svm  car_detector_orientation_150.svm  car_detector_orientation_30.svm  car_detector_orientation_60.svm  car_detector_orientation_90.svm  car_training_orientation_0.txt  car_training_orientation_120.txt  car_training_orientation_150.txt  car_training_orientation_30.txt  car_training_orientation_60.txt  car_training_orientation_90.txt
hog_svm_dlib/src/tools/: README.txt  contrast_normalize.py  crop_to_multiple.py  extractImages.py  fixData.py  imglab  make_dlib_xml.py  mycrop.sh  myflipLR.sh  myflipUD.sh  mymove.sh  myresize.sh  myrotate.sh  myrotate_rescale.sh  organize_flip_flops.sh  rename_images.py  shuffle_images.py
(+659 files in other folders)
